Fix Datepicker on mobile

--- a/public/css/styleMobileC.scss
+++ b/public/css/styleMobileC.scss
@@ -104,6 +104,10 @@ input[type=submit]{
 
 // Other classes style
 
+.table-condensed {
+  width: 250px;
+}
+
 
 .customerContact {
   // font-size: 1.5em;
